--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-server.port = 8888
-spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
-spring.datasource.url: ${JDBC_DATABASE_URL:}
+spring.datasource.url=jdbc:postgresql://localhost:5432/heroku
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
+
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
@@ -15,4 +20,4 @@ logging.level.org.springframework=INFO
 
 spring.profiles.active=production
 
-server.port=${PORT:5000}
+server.port=${PORT:5001}
